--- a/scss/style.scss
+++ b/scss/style.scss
@@ -225,6 +225,8 @@ body {
     padding-top: 150px;
     padding-bottom: 152px;
     .product-container {
+        // width: 100%;
+        // max-width: 1110px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -238,9 +240,9 @@ body {
             display: flex;
             .product-half-box {
                 display: flex;
-                &:first-child {
-                    margin-right: 80px;
-                }
+                // &:first-child {
+                //     margin-right: 80px;
+                // }
             }
             .product {
                 position: relative;
@@ -248,30 +250,33 @@ body {
                 flex-direction: column;
                 align-items: center;
                 text-align: center;
-                margin-right: 80px;
-                padding: 40px;
+                // margin-right: 80px;
+                // padding: 40px;
+                padding: 37px;
                     &:last-child {
                         margin-right: 0;
                     }
                 .left-top-angle {
                     position: absolute;
-                    left: 0px;
-                    top: 0px;
+                    left: 20px;
+                    top: 20px;
+                    // left: 0px;
+                    // right: 0px;
                 }
                 .right-top-angle {
                     position: absolute;
-                    right: 0px;
-                    top: 0px;
+                    right: 20px;
+                    top: 20px;
                 }
                 .right-bottom-angle {
                     position: absolute;
-                    right: 0px;
-                    bottom: 0px;
+                    right: 20px;
+                    bottom: 20px;
                 }
                 .left-bottom-angle {
                     position: absolute;
-                    left: 0px;
-                    bottom: 0px;
+                    left: 20px;
+                    bottom: 20px;
                 }
                 .product-description {
                     width: 112px;
@@ -398,7 +403,7 @@ body {
                     margin-right: 0;
                 }
                 .product {
-                    margin-bottom: 80px;
+                    margin-bottom: 15px;
                     &:last-child {
                         margin-right: 0;
                     }
