fixed background images

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -212,11 +212,11 @@ body {
             }            
         }
         .male-collection-box {
-            background-image: url(/img/male-img.png);
+            background-image: url(img/male-img.png);
             margin-right: 15px;
         }
         .female-collection-box {
-            background-image: url(/img/female-img.png);
+            background-image: url(img/female-img.png);
         }
     }
 }
